Thu Sep  2 22:31:11 MEST 1999  Sven Neumann <sven@gimp.org>

	* plug-ins/gap/gap_lib.[ch]
	* plug-ins/gap/gap_main.c
	* plug-ins/gap/gap_mov_dialog.c
	* plug-ins/gap/gap_mpege.c
	* plug-ins/gap/gap_range_ops.c
	* plug-ins/gap/gap_split.c: applied patches from the GAP author
	Wolfgang Hofer:

	- Simplified naming convention for AnimFrames: under_score isn't
  	  mandatory anymore.
	- gimp_file_save is called INTERACTIVE on first call and 
       	  RUN_WITH_LAST_VALUES later.

Thu Sep  2 11:51:02 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/gtkhwrapbox.[ch]
	* app/gtkwrapbox.[ch]: sync from gle

	* app/inteface.c: set allow_shrink on the toolbox window, use
	gtk_hwrap_box_new

	* app/blend.c: use shift to constrain to 45 deg: XachCode (tm)

Thu Sep  2 19:25:03 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/app_procs.c: call device_status_free before freeing brushes
	and patterns, so the devicerc can be written properly.

	* app/brush_scale.h: removed the scale_indicator_bits definition

	* app/brush_select.[ch]
	* tools/pdbgen/pdb/brush_select.pdb
	* app/brush_select_cmds.c
	* app/gimpbrushlist.c: display the pixmap brushes correctly and
	set the sensitivity of the edit/delete buttons properly when adding
	or deleting brushes.

Thu Sep  2 16:46:35 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/gimpcontextpreview.c: grab the pointer so that the popups don't
	get stuck and connect to the brush signals so the preview follows if
	the brush is edited or renamed.
	
	* app/gradient_select.c: update the gradient_preview in the toolbox
	when editing a gradient.

Thu Sep  2 02:12:20 1999  Jay Cox  (jaycox@earthlink.net)

	* app/app_procs.c: free the brush dialog before freeing the brushes.

	* app/blend.c, app/bucket_fill.c: don't include brush_select.h

	* app/brush_select.[ch]: add the ability to delete generated brushes.

	* app/gimpbrushgenerated.c: save the brush parameters on seperate lines.

	* app/gimpbrushlist.c: make sure we don't overwrite other brush